--- a/design_a_band.html
+++ b/design_a_band.html
@@ -118,8 +118,11 @@
       <h2>Album Cover</h2>
      <img src= "./img/portfolio/design_a_band/albumcover.png">
      <h2>Band Biography</h2>
-     <p>Channel 44' comes from two kids living in North Carolina trying to express their love to modern music of indie with a mix of electronic. Members, John Hivey and Shirley Mohanne, met after spending classes together in Pepperdine University, where they took courses of psychology and telecommunication. The name, "Channel 44," comes from the years spent from Hivey being an intern on an news channel in Asheville called Channel 44, which internship was very difficult to him. They first boomed in small club-scenes in LA, where spread their music through blogs and websites, which landed them associated with other group member, Jayson Gretzky, where he was known for producing and his instrumental use of music, respectively. 
-When they were landed their first album with Mad Decent, they sought out music that will speak about the troubles of life and to show awareness of social problems around the world. These range from war violence to poverty in nations.</br> </br>To hear their newest track, check out the following link:
+     <p>Channel 44' comes from two kids living in North Carolina trying to express their love to indie music with a mix of electronic. Members, John Hivey and Shirley Mohanne, met after spending classes together in Pepperdine University, where they took courses of psychology and telecommunication. In their time, they spent on a podcast that showed their opinions and pop-culture globally.
+      This lead to the chance of John to be in many job opportunities due to how they spoke about situations that were a huge thing at that time. The name, "Channel 44," comes from the years spent from Hivey being an intern on an news channel in Asheville called Channel 44, which the internship was very difficult to him. 
+      They first boomed in small club-scenes in LA, where they spread their music through blogs and websites, which landed them associated with other group member, Jayson Gretzky, where he was known for producing and his instrumental use of music, respectively. 
+      When they were landed their first album with Mad Decent, they sought out music that will speak about the troubles of life and to show awareness of social problems around the world. These range from war violence to poverty in nations. As time passed, they develop their taste with a wide variety of instruments in the songs.
+      </br> </br>To hear their newest track, check out the following link:
 <a href="https://www.youtube.com/watch?v=eH4F1Tdb040" target="_blank">Crossfire</a>.</p>
   </div>
   
