--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     body {
       font-family: Verdana;
       background-color: silver;
-      cursor:url(http://www.rw-designer.com/cursor-view/67105.png),auto;
+      cursor: auto;
     }
     
     /* TODO: Make sure the height of your page is big enough */
@@ -123,6 +123,8 @@
                     <li><a href="./portfolio.html">Shooting Star</a></li>
                     <li><a href="./portfolio.html">Maze Game</a></li>
                     <li><a href="./portfolio.html">Ad-Design</a></li>
+                    <li><a href="./portfolio.html">Design A Band!</a></li>
+                    <li><a href="./portfolio.html">Algebra Challenges (1.1, 1.2 & 1.3)</a></li>
                 </ul>
             </ul>
         </div>
